# label

./: .gitignore  CMakeLists.txt  data.json
src/: algorithm.cpp  algorithm.hpp  application.cpp  application.hpp  assert.hpp  jsonparser.cpp  jsonparser.hpp  main.cpp  matrix.hpp  operators.hpp  solver.hpp  task.hpp  valuetype.hpp  valuewrapper.hpp
test/: CMakeLists.txt  data.json
test/src/: jsonparser.hpp  main.cpp
